# minipar-interpreter

./: .gitignore  CMakeLists.txt  Makefile  README.md  minipar_bnf.typ
include/core/: Error.h  Executor.h  Expr.h  Minipar.h  Parser.h  Scanner.h  Semantic.h  Stmt.h  Token.h
include/enum/: TokenType.h
scripts/: array.minipar  client.minipar  error5.minipar  error7.minipar  error8.minipar  ex4.minipar  quicksort.minipar  recomend.minipar  server.minipar  simple_nn.minipar  test1.minipar  test11.minipar  test12.minipar  test2.minipar  test3.minipar  test4.minipar  test5.minipar  test7.minipar  test8.minipar  test9.minipar  test_array_input.minipar  xor.minipar
scripts_tests/: error1.minipar  error2.minipar  error3.minipar  error6.minipar  error9.minipar  ex1.minipar  ex3.minipar  ex4.minipar  ex5.minipar  ex8.minipar  ex9.minipar  fatorial_rec.minipar  test1.minipar  test10.minipar  test11.minipar  test12.minipar  test3.minipar  test6.minipar  test8.minipar
src/: main.cpp
src/core/: Executor.cpp  Minipar.cpp  Parser.cpp  Scanner.cpp  Semantic.cpp  Token.cpp
src/enum/: TokenType.cpp
